remove csrf filters and add second input field.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -18,6 +18,7 @@ play.http.requestHandler = "play.api.http.DefaultHttpRequestHandler"
 # Registers the filters
 # ~~~~~
 play.filters.enabled += "play.filters.csp.CSPFilter"
+play.filters.disabled+= play.filters.csrf.CSRFFilter
 
 # The application DI modules
 # ~~~~~
@@ -68,4 +69,10 @@ play.filters.csp {
   }
 }
 
+play.filters {
+  supportsCredentials = true
+}
+
 include "silhouette.conf"
+
+
