--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -4,7 +4,7 @@ silhouette {
   authenticator.cookieName="authenticator"
   authenticator.cookiePath="/"
   authenticator.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-  authenticator.httpOnlyCookie=true
+  authenticator.httpOnlyCookie=false
   authenticator.sameSite="Lax"
   authenticator.useFingerprinting=true
   authenticator.authenticatorIdleTimeout=30 minutes
@@ -21,7 +21,7 @@ silhouette {
   oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
   oauth1TokenSecretProvider.cookiePath="/"
   oauth1TokenSecretProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-  oauth1TokenSecretProvider.httpOnlyCookie=true
+  oauth1TokenSecretProvider.httpOnlyCookie=false
   oauth1TokenSecretProvider.sameSite="Lax"
   oauth1TokenSecretProvider.expirationTime=5 minutes
 
@@ -35,7 +35,7 @@ silhouette {
   csrfStateItemHandler.cookieName="OAuth2State"
   csrfStateItemHandler.cookiePath="/"
   csrfStateItemHandler.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-  csrfStateItemHandler.httpOnlyCookie=true
+  csrfStateItemHandler.httpOnlyCookie=false
   csrfStateItemHandler.sameSite="Lax"
   csrfStateItemHandler.expirationTime=5 minutes
 
